--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,9 @@ textarea{
   border-left: 1px solid black;
   padding: 10px;
 }
-
+footer {
+  text-align: center;
+}
 .jumbotron {
   text-align: center;
   background-color: transparent;
